tests/e2e/semantics/obj_implicit_bool_int.error
Error: syntax error in story at line 3, column 1

3|    map_int = map_bool
      ^^^^^^^^^

E0100: Can't assign `Map[boolean,int]` to `Map[int,int]`
