tests/e2e/semantics/obj_implicit_bool_int.story
map_bool = {true: 0}
map_int = {1: 0}
map_int = map_bool
